crates/decorous-frontend/src/parser/snapshots/decorous_frontend__nom_parser__tests__can_parse_attribute-5.snap
---
source: crates/decorous-frontend/src/nom_parser/mod.rs
expression: attribute(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 14,
            line: 1,
            fragment: "",
            extra: (),
        },
        KeyValue(
            "hello",
            Some(
                Literal(
                    "你好",
                ),
            ),
        ),
    ),
)
