crates/decorous-frontend/src/parser/snapshots/decorous_frontend__nom_parser__tests__can_parse_attribute-8.snap
---
source: crates/decorous-frontend/src/nom_parser/mod.rs
expression: attribute(input.into())
---
Err(
    Error(
        Report {
            errors: [
                ParseError {
                    fragment: LocatedSpan {
                        offset: 12,
                        line: 1,
                        fragment: "\"wrong\"",
                        extra: (),
                    },
                    err_type: Nom(
                        Tag,
                    ),
                },
            ],
        },
    ),
)
