crates/decorous-frontend/src/parser/snapshots/decorous_frontend__nom_parser__tests__can_parse_attribute.snap
---
source: crates/decorous-frontend/src/nom_parser/mod.rs
expression: attribute(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 19,
            line: 1,
            fragment: "",
            extra: (),
        },
        KeyValue(
            "hello",
            Some(
                Literal(
                    "hello world",
                ),
            ),
        ),
    ),
)
