crates/decorous-frontend/src/parser/snapshots/decorous_frontend__nom_parser__tests__can_parse_elements-10.snap
---
source: crates/decorous-frontend/src/nom_parser/mod.rs
expression: element(input.into())
---
Err(
    Failure(
        Report {
            errors: [
                ParseError {
                    fragment: LocatedSpan {
                        offset: 20,
                        line: 1,
                        fragment: "notdiv",
                        extra: (),
                    },
                    err_type: InvalidClosingTag(
                        "notdiv",
                    ),
                },
            ],
        },
    ),
)
