crates/decorous-frontend/src/parser/snapshots/decorous_frontend__nom_parser__tests__can_parse_elements-12.snap
---
source: crates/decorous-frontend/src/nom_parser/mod.rs
expression: element(input.into())
---
Err(
    Error(
        Report {
            errors: [
                ParseError {
                    fragment: LocatedSpan {
                        offset: 4,
                        line: 1,
                        fragment: "",
                        extra: (),
                    },
                    err_type: ExpectedCharacter(
                        '/',
                    ),
                },
            ],
        },
    ),
)
