crates/decorous-frontend/src/parser/snapshots/decorous_frontend__nom_parser__tests__can_parse_elements-2.snap
---
source: crates/decorous-frontend/src/nom_parser/mod.rs
expression: element(input.into())
---
Ok(
    (
        LocatedSpan {
            offset: 23,
            line: 1,
            fragment: "",
            extra: (),
        },
        Element {
            tag: "div",
            attrs: [
                KeyValue(
                    "hello",
                    Some(
                        Literal(
                            "world",
                        ),
                    ),
                ),
            ],
            children: [],
        },
    ),
)
